--- a/task2.css
+++ b/task2.css
@@ -586,3 +586,23 @@ font-weight: 200;
         font-size: 1em;
     }
 }
+.c10{
+    background-color: #ffb000;
+    overflow: hidden;
+}
+.apove{
+    background-color: black;
+    position: relative;
+    padding: 10px;
+
+}
+.apove::after{
+    content: "";
+    position: absolute;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    right: -100%;
+    top: 0;
+}
+.c10{padding: 0;}
